# ChangeLog for games-board/grhino
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/grhino/ChangeLog,v 1.7 2008/05/02 18:50:06 nyhm Exp $

  02 May 2008; Tristan Heaven <nyhm@gentoo.org>
  +files/grhino-0.16.0-gcc43.patch, grhino-0.16.0.ebuild:
  Fix building with gcc-4.3

  20 Mar 2008; Tristan Heaven <nyhm@gentoo.org> grhino-0.16.0.ebuild:
  Add ~amd64 keyword

  11 Jun 2007; Tristan Heaven <nyhm@gentoo.org> grhino-0.16.0.ebuild:
  Add nls USE flag

  09 Jan 2007; <tupone@gentoo.org> grhino-0.16.0.ebuild:
  Install menu entry only if gnome use flag has been specified

  08 Jan 2007; <tupone@gentoo.org> grhino-0.16.0.ebuild:
  Defaulting to use gtp if neither gnome or gtp are specified

  08 Jan 2007; <tupone@gentoo.org> grhino-0.16.0.ebuild:
  Adding more errors handling

*grhino-0.16.0 (08 Jan 2007)

  08 Jan 2007; <tupone@gentoo.org> +grhino-0.16.0.ebuild:
  New ebuild. Bug #90373 by Anton Romanov
