@@ -1,6 +1,9 @@
 # ChangeLog for games-board/grhino
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/grhino/ChangeLog,v 1.7 2008/05/02 18:50:06 nyhm Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-board/grhino/ChangeLog,v 1.8 2009/05/04 02:26:42 mr_bones_ Exp $
+
+  04 May 2009; Michael Sterrett <mr_bones_@gentoo.org> grhino-0.16.0.ebuild:
+  EAPI=2
 
   02 May 2008; Tristan Heaven <nyhm@gentoo.org>
   +files/grhino-0.16.0-gcc43.patch, grhino-0.16.0.ebuild:
